toml-pretty-deser/compilation_failure_tests/tagged_enum_multi_fields.stderr
error: custom attribute panicked
 --> compilation_failure_tests/tagged_enum_multi_fields.rs:7:1
  |
7 | #[tpd(tag="kind")]
  | ^^^^^^^^^^^^^^^^^^
  |
  = help: message: assertion `left == right` failed: Tagged enum variants must have exactly one unnamed field
            left: 2
           right: 1
